* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia

Dashboard
======================
* Dashboard build detail page is creating many JMX server threads (CC-831). Reported by Matthias Grunwalde. Diagnosed by Xinglang Wang. Tested by Joe Schmetzer. Unit Tests patched by Stephen Smith.
  Need to restore jmock test cases: 
  net.sourceforge.cruisecontrol.dashboard.repository.BuildInformationRepositoryInMemoImplTest.xxxtestShouldReturnJMXConnection()
  net.sourceforge.cruisecontrol.dashboard.service.BuildLoopQueryServiceTest.xxxtestShouldReturnBuildOutput()

documentation
======================

configxml.html
----------------------
* PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley
* Fix doc error attribute "localworkingdir" for <Mercurial> build trigger when it should be "localworkingcopy" (CC-893). Reported by Joona Petrell


CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------
* Fix bug where a project with no ModificationSet would cause the error message 'Failed to reach dashboard instance : http://localhost:8080/dashboard/buildloop/listener, either the dashboard has not started up or there is a network problem' (CC-766).

cruisecontrol.sh (Binary Release)
----------------------
* Allow JETTY_LOGS to be set by environment varable (CC-872). Patch by Angie Lin

CruiseControlConfig
----------------------
* Restore the ability to have custom PropertiesPlugins.